--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-enhanced-codeblock-diff",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Enables diff display with syntax highlighting in Obsidian code blocks for efficient code comparison and review.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"format": "biome format --write main.ts",
+		"ci": "biome ci main.ts",
+		"lint": "biome lint main.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"@biomejs/biome": "1.9.1",
+		"@types/jest": "29.5.13",
+		"@types/node": "20.16.5",
+		"@types/prismjs": "1.26.4",
+		"builtin-modules": "4.0.0",
+		"esbuild": "0.23.1",
+		"license-checker": "25.0.1",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"tslib": "2.7.0",
+		"typescript": "5.6.2"
+	},
+	"dependencies": {
+		"@steelydylan/prism-diff-highlight": "^1.0.4",
+		"prismjs": "^1.29.0"
 	}
 }
