--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "obsidian-enhanced-codeblock-diff",
+	"name": "Enhanced Codeblock Diff",
+	"version": "0.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Enables diff display with syntax highlighting in Obsidian code blocks for efficient code comparison and review.",
+	"author": "Syu-fu",
+	"authorUrl": "https://github.com/Syu-fu",
+	"fundingUrl": "https://github.com/Syu-fu/obsidian-enhanced-codeblock-diff",
 	"isDesktopOnly": false
 }
